--- a/README
+++ b/README
@@ -13,6 +13,9 @@ http://www.physics.wisc.edu/~craigm/idl/cmpfit.html
 Directory containing Results Tables roughly specifying the centroids of the
 spots per image frame should be located as "Input folder".
 
-(14 Feb 2012)
+14 Feb 2012, vers 0.10:
 - In guessparams(), calculation of moments is now constrained within radius of hw pixels.
+
+27 March 2012, vers 0.11:
+- Now tagged as failure -2 if the estimated centre is located on the boundary.
 
